--- a/library_frontend/public/index.html
+++ b/library_frontend/public/index.html
@@ -40,7 +40,7 @@
     -->
     <title>React App</title>
   </head>
-  <body style="background-color: #2b2b2b" class="text-white">
+  <body style="background-color: #333030" class="text-white" >
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
